--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "axios": "^0.19.2",
     "highcharts": "^8.1.2",
     "highcharts-react-official": "^3.0.0",
-    "novelcovid": "^2.2.0",
+    "numeral": "^2.0.6",
     "proj4": "^2.6.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-number-format": "^4.4.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
